--- a/templates/partials/logo.html.twig
+++ b/templates/partials/logo.html.twig
@@ -1,9 +1,13 @@
-{% set logo = theme_var(mobile ? 'custom_logo_mobile' : 'custom_logo') %}
-<a href="{{ home_url }}" class="navbar-brand mr-10">
-{% if logo %}
-  {% set logo_file = (logo|first).name %}
-  <img src="{{ url('theme://images/logo/' ~ logo_file)  }}" alt="{{ site.title }}" />
+{% if theme_var('enable-logo') %}
+    {% set logo = theme_var(mobile ? 'custom_logo_mobile' : 'custom_logo') %}
+    <a href="{{ home_url }}" class="navbar-brand mr-10">
+        {% if logo %}
+            {% set logo_file = (logo|first).name %}
+            <img src="{{ url('theme://images/logo/' ~ logo_file)  }}" alt="{{ site.title }}" />
+        {% else %}
+            {% include('@images/grav-logo.svg') %}
+        {% endif %}
+    </a>
 {% else %}
-  {% include('@images/grav-logo.svg') %}
+    <a href="{{ base_url == '' ? '/' : base_url }}" class="navbar-brand" style="font-size: 1.5rem;">{{ config.site.title }}</a>
 {% endif %}
-</a>
